--- a/MSBuildForUnity.Common.props
+++ b/MSBuildForUnity.Common.props
@@ -2,9 +2,9 @@
   
   <!-- These are specific to this Unity project and can't be overridden -->
   <PropertyGroup>
-    <UnityProjectAssetsPath>E:\GITproject\HoloMapOnline\Assets</UnityProjectAssetsPath>
+    <UnityProjectAssetsPath>E:\GITproject\TacticMap\Assets</UnityProjectAssetsPath>
     
-    <_MSBuildForUnityGeneratedOutputDirectory>E:\GITproject\HoloMapOnline\MSBuild</_MSBuildForUnityGeneratedOutputDirectory>
+    <_MSBuildForUnityGeneratedOutputDirectory>E:\GITproject\TacticMap\MSBuild</_MSBuildForUnityGeneratedOutputDirectory>
     <MSBuildForUnityGeneratedProjectDirectory>$(_MSBuildForUnityGeneratedOutputDirectory)\Projects</MSBuildForUnityGeneratedProjectDirectory>
   </PropertyGroup>
   
