--- a/MSBuildForUnity.Common.props
+++ b/MSBuildForUnity.Common.props
@@ -2,9 +2,9 @@
   
   <!-- These are specific to this Unity project and can't be overridden -->
   <PropertyGroup>
-    <UnityProjectAssetsPath>E:\GITproject\TacticMap\Assets</UnityProjectAssetsPath>
+    <UnityProjectAssetsPath>X:\GIT_Project\TacticMap\Assets</UnityProjectAssetsPath>
     
-    <_MSBuildForUnityGeneratedOutputDirectory>E:\GITproject\TacticMap\MSBuild</_MSBuildForUnityGeneratedOutputDirectory>
+    <_MSBuildForUnityGeneratedOutputDirectory>X:\GIT_Project\TacticMap\MSBuild</_MSBuildForUnityGeneratedOutputDirectory>
     <MSBuildForUnityGeneratedProjectDirectory>$(_MSBuildForUnityGeneratedOutputDirectory)\Projects</MSBuildForUnityGeneratedProjectDirectory>
   </PropertyGroup>
   
@@ -21,9 +21,9 @@
     <UnityCurrentPlatform>WSA</UnityCurrentPlatform>
     <UnityCurrentTargetFramework>net46</UnityCurrentTargetFramework>
     
-    <UnityMajorVersion>2018</UnityMajorVersion>
+    <UnityMajorVersion>2019</UnityMajorVersion>
     <UnityMinorVersion>4</UnityMinorVersion>
-    <UnityEditorInstallPath>D:\Unity\2018.4.21f1\Editor</UnityEditorInstallPath>
+    <UnityEditorInstallPath>D:\Unity\2019.4.25f1\Editor</UnityEditorInstallPath>
   </PropertyGroup>
   
   <PropertyGroup>
